[package]
edition = "2021"
name = "tomb_of_the_mask"
version = "0.1.0"

[dependencies]
bevy = "0.15"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
